# ai-stock-assistant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py
app/models/: schemas.py
app/services/: ai_service.py  stock_service.py
frontend/: index.html
tests/: conftest.py  test_ai_service.py  test_stock_service.py
